--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
         background: var(--neon-blue);
       }
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react": "https://aistudiocdn.com/react@^19.2.0",
@@ -242,5 +242,8 @@
     <div id="root"></div>
     <div class="hud-vignette pointer-events-none"></div>
     <div class="fixed inset-0 scanline z-[101] opacity-20 pointer-events-none"></div>
+    
+    <!-- ENTRY POINT: Required for Vite to bundle the React App -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
